Fixed-20246: Pagination overlapping when user hover last product

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
@@ -29,7 +29,7 @@
 & when (@media-common = true) {
     //  Product Lists
     .products {
-        margin: @indent__l 0;
+        margin: @indent__l 0 @indent__l * 2;
     }
 
     .product {
